Remove unwanted files and added TMDB info to config

--- a/OGDMoviesUI/OGDMoviesUI/Web.config
+++ b/OGDMoviesUI/OGDMoviesUI/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="TMDB_API_KEY" value="7052326b7fcd14860fda39809ef2191a"/>
+    <add key="TMDB_API_URL" value="https://api.themoviedb.org/3"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
