--- a/OGDMovies.Api/OGDMovies.Api.csproj
+++ b/OGDMovies.Api/OGDMovies.Api.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\TMDBModels.cs" />
     <Compile Include="Models\OMDBModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConnectionRepos\TMDBConnection.cs" />
