--- a/OGDMovies.Api/Web.config
+++ b/OGDMovies.Api/Web.config
@@ -12,6 +12,7 @@
     <!--The Movie DB-->
     <add key="TMDB_API_KEY" value="7052326b7fcd14860fda39809ef2191a" />
     <add key="TMDB_API_URL" value="https://api.themoviedb.org/3/" />
+    <add key="TMDB_IMAGE_URL" value="https://image.tmdb.org/t/p/w500/" />
     <!--OMDB-->
     <add key="OMDB_API_KEY" value="a0a04c41" />
     <add key="OMDB_API_URL" value="http://www.omdbapi.com/" />
