--- a/OGDMovies.Api/bin/OGDMovies.Api.dll.config
+++ b/OGDMovies.Api/bin/OGDMovies.Api.dll.config
@@ -16,6 +16,8 @@
     <!--OMDB-->
     <add key="OMDB_API_KEY" value="a0a04c41" />
     <add key="OMDB_API_URL" value="http://www.omdbapi.com/" />
+    <!--YouTube-->
+    <add key="YOUTUBE_API_KEY" value="AIzaSyCXvGOECII_0G5sFIxT3yMI4CFeVu_SWJU" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
