--- a/OGDMovies.Api/packages.config
+++ b/OGDMovies.Api/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="Google.Apis" version="1.36.1" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.36.1" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.36.1" targetFramework="net461" />
+  <package id="Google.Apis.YouTube.v3" version="1.36.1.1226" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
@@ -23,6 +27,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="OpenSSL.PrivateKeyDecoder" version="1.2.0" targetFramework="net461" />
+  <package id="OpenSSL.X509Certificate2.Provider" version="1.2.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="Unity" version="5.2.0" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
@@ -31,4 +37,5 @@
   <package id="Unity.Mvc5" version="1.3.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
+  <package id="YouTube.Api" version="1.0.7" targetFramework="net461" />
 </packages>
