UI improvements + Youtube player

--- a/OGDMovies.Web/Web.config
+++ b/OGDMovies.Web/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="API_URL" value="http://localhost:12006/" />
+    <add key="YOUTUBE_URL" value="https://www.youtube.com/watch?v=" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
