--- a/OGDMovies.Api/OGDMovies.Api.csproj
+++ b/OGDMovies.Api/OGDMovies.Api.csproj
@@ -224,6 +224,7 @@
     <Compile Include="ConnectionRepos\TmdbConnection.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="api.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
@@ -242,10 +243,10 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
