--- a/OGDMovies.Web/OGDMovies.Web.csproj
+++ b/OGDMovies.Web/OGDMovies.Web.csproj
@@ -199,6 +199,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\js\facebook.js" />
     <Content Include="Scripts\js\modalClick.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
