--- a/OGDMovies.Web/OGDMovies.Web.csproj
+++ b/OGDMovies.Web/OGDMovies.Web.csproj
@@ -177,8 +177,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="blank.jpg" />
-    <Content Include="Content\blank.jpg" />
+    <Content Include="Content\blank_bd.jpg" />
+    <Content Include="Content\blank_poster.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
